already been followed in almost every case.

20100322T1317Z <gchicares@sbcglobal.net> [761]

  progress_meter_test.cpp
Refactor to eliminate redundant qualified-id.

20100322T1326Z <gchicares@sbcglobal.net> [761]

  Makefile.am
  ihs_dbdict.hpp
  objects.make
  product_file_test.cpp [new file]
Add a unit test to measure speed of reading product files, emulating
'progress_meter_test.cpp'.

20100322T1626Z <gchicares@sbcglobal.net> [761]

  ce_product_name.hpp
  dbnames.hpp
  ihs_basicval.cpp
  my_db.cpp
  my_fund.cpp
  my_tier.cpp
  product_names.hpp
Anticipate new product-file names.

20100322T1728Z <gchicares@sbcglobal.net> [761]

  workhorse.make
Facilitate further fardel fitting.

20100323T1147Z <gchicares@sbcglobal.net> [761]

  xml_serialize.hpp
  xml_serialize_test.cpp
Don't append duplicate xml elements (VS). See:
  http://lists.nongnu.org/archive/html/lmi/2010-03/msg00035.html

20100323T1209Z <gchicares@sbcglobal.net> [761]

  version.hpp
Mark failsafe release candidate.

20100323T1713Z <gchicares@sbcglobal.net> [761]

  ihs_proddata.cpp
Refactor (VS).

20100324T0120Z <gchicares@sbcglobal.net> [761]

  ihs_proddata.cpp
  main_wx.cpp
  my_prod.cpp
  objects.make
  product_names.cpp
Reimplement 'policy' product files (VS).

20100324T0124Z <gchicares@sbcglobal.net> [761]

  version.hpp
Mark release candidate.

20100324T1206Z <gchicares@sbcglobal.net> [761]

  fenv_lmi_test.cpp
Include a required header, resolving a GNU/Linux issue (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2010-03/msg00061.html

20100324T1207Z <gchicares@sbcglobal.net> [761]

  bcc_5_5_1.make
  callback.hpp
  financial_test.cpp
  objects.make
  obstruct_slicing_test.cpp
Resolve unit-test build issues with an ancient compiler.

20100324T2234Z <gchicares@sbcglobal.net> [761]

  numeric_io_cast.hpp
Work around an msvc defect (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2010-03/msg00060.html
  http://lists.nongnu.org/archive/html/lmi/2010-03/msg00067.html
